--- a/.github/workflows/build-windows-exe.yml
+++ b/.github/workflows/build-windows-exe.yml
@@ -42,8 +42,12 @@ jobs:
         docker --version
         docker info
         
+        # 确保所有脚本都有执行权限
+        echo "Setting execute permissions for scripts..."
+        chmod +x build-ci.sh build.sh make_win.sh
+        ls -la *.sh
+        
         # 使用CI专用的构建脚本（无交互式标志）
-        chmod +x build-ci.sh
         echo "Using CI-friendly build script..."
         
         # 设置环境变量
@@ -51,28 +55,65 @@ jobs:
         
         # 设置可重现构建并运行
         echo "Starting build process..."
-        if ! ELECBUILD_COMMIT=HEAD ./build-ci.sh; then
-          echo "CI script failed, trying fallback method..."
-          chmod +x build.sh
+        
+        # 首先尝试GitHub Actions专用脚本
+        chmod +x build-github-actions.sh
+        if ./build-github-actions.sh; then
+          echo "===== GitHub Actions script succeeded ====="
+        elif ELECBUILD_COMMIT=HEAD ./build-ci.sh; then
+          echo "===== CI script succeeded ====="
+        else
+          echo "===== CI script failed, trying fallback methods ====="
+          
+          # 方法1：修改原始脚本移除交互式标志
+          echo "Trying fallback method 1: modified original script..."
           sed -i 's/docker run -it/docker run/g' build.sh
-          ELECBUILD_COMMIT=HEAD ./build.sh
+          # 同时修改docker命令使用bash执行
+          sed -i 's|./make_win.sh|bash make_win.sh|g' build.sh
+          if ! ELECBUILD_COMMIT=HEAD ./build.sh; then
+            echo "===== Fallback method 1 failed, trying method 2 ====="
+            
+            # 方法2：直接运行Docker命令
+            echo "Building Docker image manually..."
+            docker build -t electrum-wine-builder-img .
+            echo "Running Docker container manually..."
+                         docker run --rm \
+               -v "$(pwd)/../..":/opt/wine64/drive_c/electrum \
+               --workdir /opt/wine64/drive_c/electrum/contrib/build-wine \
+               electrum-wine-builder-img \
+               bash -c "chmod +x make_win.sh && bash make_win.sh"
+           fi
+         fi
         fi
     
     # 5. 列出生成的文件（用于调试）
-    - name: List generated files
+    - name: List generated files and debug info
+      if: always()  # 即使构建失败也要运行
       run: |
+        echo "===== BUILD RESULT ANALYSIS ====="
         echo "Contents of contrib/build-wine/dist/:"
-        ls -la contrib/build-wine/dist/ || echo "dist directory not found"
+        ls -la contrib/build-wine/dist/ 2>/dev/null || echo "dist directory not found"
         
-        # 如果构建失败，显示更多调试信息
-        if [ $? -ne 0 ]; then
-          echo "Build seems to have failed. Checking for logs..."
-          find contrib/build-wine/ -name "*.log" -exec cat {} \;
-          echo "Docker containers:"
-          docker ps -a
-          echo "Docker images:"
-          docker images
-        fi
+        echo "===== CHECKING FOR ANY OUTPUT FILES ====="
+        find contrib/build-wine/ -name "*.exe" -o -name "*.zip" -o -name "*.msi" | head -20
+        
+        echo "===== DOCKER DEBUG INFO ====="
+        echo "Docker containers (including stopped):"
+        docker ps -a
+        echo "Docker images:"
+        docker images
+        
+        echo "===== LOG FILES ====="
+        find contrib/build-wine/ -name "*.log" -exec echo "=== {} ===" \; -exec cat {} \; 2>/dev/null || echo "No log files found"
+        
+        echo "===== FILE PERMISSIONS CHECK ====="
+        ls -la contrib/build-wine/*.sh
+        
+        echo "===== DISK SPACE ====="
+        df -h
+        
+        echo "===== AVAILABLE MEMORY ====="
+        free -h || echo "free command not available"
     
     # 6. 上传构建好的exe文件
     - name: Upload Windows binaries
