--- a/.github/workflows/build-windows-exe.yml
+++ b/.github/workflows/build-windows-exe.yml
@@ -78,44 +78,41 @@ jobs:
         # 首先尝试最终脚本（处理用户ID映射）
         echo "=== Trying Method 1: Final script with UID mapping ==="
         if ./build-final.sh; then
-         echo "===== Final script succeeded ====="
+          echo "===== Final script succeeded ====="
+        elif ./build-simple.sh; then
+          echo "===== Simple script succeeded ====="
+        elif ./build-github-actions.sh; then
+          echo "===== GitHub Actions script succeeded ====="
+        elif ELECBUILD_COMMIT=HEAD ./build-ci.sh; then
+          echo "===== CI script succeeded ====="
         else
-          echo "=== Trying Method 2: Simple script ==="
-          if ./build-simple.sh; then
-            echo "===== Simple script succeeded ====="
-          else
-            echo "=== Trying Method 3: GitHub Actions script ==="
-            if ./build-github-actions.sh; then
-              echo "===== GitHub Actions script succeeded ====="
-            else
-              echo "=== Trying Method 4: CI script ==="
-              if ELECBUILD_COMMIT=HEAD ./build-ci.sh; then
-                echo "===== CI script succeeded ====="
-              else
-                echo "=== Trying Method 5: Modified original script ==="
+          echo "=== All automated scripts failed, trying manual methods ==="
+          
+          # 方法5：修改原始脚本
+          echo "=== Trying Method 5: Modified original script ==="
           sed -i 's/docker run -it/docker run/g' build.sh
-          # 同时修改docker命令使用bash执行
-                           sed -i 's|./make_win.sh|bash make_win.sh|g' build.sh
-                 if ELECBUILD_COMMIT=HEAD ./build.sh; then
-                   echo "===== Modified original script succeeded ====="
-                 else
-                   echo "=== Trying Method 6: Manual Docker commands ==="
-                   echo "Building Docker image manually..."
+          sed -i 's|./make_win.sh|bash make_win.sh|g' build.sh
+          
+          if ELECBUILD_COMMIT=HEAD ./build.sh; then
+            echo "===== Modified original script succeeded ====="
+          else
+            # 方法6：手动Docker命令
+            echo "=== Trying Method 6: Manual Docker commands ==="
+            echo "Building Docker image manually..."
             docker build -t electrum-wine-builder-img .
             echo "Running Docker container manually..."
-                         docker run --rm \
-               -v "$(pwd)/../..":/opt/wine64/drive_c/electrum \
-               --workdir /opt/wine64/drive_c/electrum/contrib/build-wine \
-               electrum-wine-builder-img \
-                       bash -c "echo 'Manual Docker run - executing make_win.sh with bash'; bash make_win.sh"
-                   else
-                     echo "===== ALL BUILD METHODS FAILED ====="
-                     echo "Please check the debug information below for details."
-                   fi
-                 fi
-               fi
-             fi
-           fi
+            docker run --rm \
+              -v "$(pwd)/../..":/opt/wine64/drive_c/electrum \
+              --workdir /opt/wine64/drive_c/electrum/contrib/build-wine \
+              electrum-wine-builder-img \
+              bash -c "echo 'Manual Docker run - executing make_win.sh with bash'; bash make_win.sh"
+              
+            # 检查最终结果
+            if [ ! -f "dist/*.exe" ] && [ ! -f "../../contrib/build-wine/dist/*.exe" ]; then
+              echo "===== ALL BUILD METHODS FAILED ====="
+              echo "Please check the debug information below for details."
+            fi
+          fi
         fi
     
     # 5. 列出生成的文件（用于调试）
